# reqwest-as-a-service

./: Cargo.toml  README.md  build.rs
client/: Cargo.toml  build.rs
client/src/: api.rs  lib.rs
proto/: api.proto
src/: api.rs  lib.rs  main.rs
tests/: tests.rs
